--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,27 @@ ELASTICSEARCH_PORT=
 ELASTICSEARCH_SCHEME=
 ELASTICSEARCH_USER=
 ELASTICSEARCH_PASS=
+
+################# DOCKER ELASTICSEARCH #####################
+#
+# ELASTICSEARCH
+#
+# Available ELASTICSEARCH_PLUGINS:
+#
+# amazon-ec2,analysis-icu,analysis-kuromoji,analysis-nori,
+# analysis-phonetic,analysis-smartcn,analysis-stempel,
+# analysis-ukrainian,discovery-azure-classic,discovery-ec2,
+# discovery-file,discovery-gce,google-cloud-storage,
+# ingest-attachment,ingest-geoip,ingest-user-agent,mapper-murmur3,
+# mapper-size,microsoft-azure-storage,qa,repository-azure,
+# repository-gcs,repository-hdfs,repository-s3,store-smb,
+# analysis-ik,analysis-pinyin
+#
+# You can let it empty to avoid installing any plugins,
+# or install plugins as:
+# ELASTICSEARCH_PLUGINS=analysis-ik,analysis-pinyin
+#
+TZ=Asia/Shanghai
+ELASTICSEARCH_VERSION=7.17.7
+ELASTICSEARCH_HOST_PORT=9200
+ELASTICSEARCH_PLUGINS=analysis-ik
