--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,64 @@ services:
     volumes:
       - ./elasticsearch/data:/usr/share/elasticsearch/data
       - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+    networks:
+      elasticsearch:
 
+  php:
+    container_name: php
+    build:
+      context: ./
+    restart: on-failure
+    ports:
+      - 9000:9000
+    volumes:
+      - ./:/var/www/html
+    networks:
+      elasticsearch:
+
+  mysql:
+    container_name: mysql
+    image: mysql:5.7.40
+    restart: on-failure
+    ports:
+      - 3306:3306
+    environment: # 环境变量
+      MYSQL_DATABASE: "elasticsearch"
+      MYSQL_PASSWORD: "root"
+      MYSQL_ROOT_USER: "root"
+      MYSQL_ROOT_PASSWORD: "root"
+    networks:
+      elasticsearch:
+
+  nginx:
+    container_name: nginx
+    image: nginx
+    restart: on-failure
+    ports:
+      - 80:80
+    depends_on:
+      - php
+      - elasticsearch
+      - mysql
+    volumes:
+      - ./:/var/www/html
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      elasticsearch:
+
+  artisan:
+    container_name: artisan
+    build:
+      context: ./
+    volumes:
+      - ./:/var/www/html
+    depends_on:
+      - elasticsearch
+      - mysql
+    working_dir: /var/www/html
+    entrypoint: [ 'php', '/var/www/html/artisan' ]
+    networks:
+      elasticsearch:
+
+networks:
+  elasticsearch:
