--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,11 +1,13 @@
 ARG ELASTICSEARCH_VERSION
 FROM elasticsearch:${ELASTICSEARCH_VERSION}
 
-ADD ./plugins/elasticsearch-analysis-ik-7.17.6.zip /usr/share/elasticsearch/plugins
+ARG ELASTICSEARCH_VERSION
+
+ADD ./plugins/elasticsearch-analysis-ik-${ELASTICSEARCH_VERSION}.zip /usr/share/elasticsearch/plugins
 
 RUN cd /usr/share/elasticsearch/plugins \
-    && unzip -o elasticsearch-analysis-ik-7.17.6.zip -d ik \
-    && rm -rf elasticsearch-analysis-ik-7.17.6.zip
+    && unzip -o elasticsearch-analysis-ik-${ELASTICSEARCH_VERSION}.zip -d ik \
+    && rm -rf elasticsearch-analysis-ik-${ELASTICSEARCH_VERSION}.zip
 
 #ARG ELASTICSEARCH_VERSION
 #ARG ELASTICSEARCH_PLUGINS
