--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,19 @@ services:
     networks:
       elasticsearch:
 
+  kibana:
+    container_name: kibana
+    image: kibana:7.17.6
+    ports:
+      - 5601:5601
+    restart: on-failure
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    networks:
+      elasticsearch:
+
   php:
     container_name: php
     image: xiaoxuan6/php:7.4-fpm-alpine
