--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,6 @@ services:
     networks:
       elasticsearch:
 
-  php:
-    container_name: php
-    image: xiaoxuan6/php:7.4-fpm-alpine
-    restart: on-failure
-    ports:
-      - 9000:9000
-    volumes:
-      - ./:/var/www/html
-    networks:
-      elasticsearch:
-
   mysql:
     container_name: mysql
     image: mysql:5.7.40
@@ -55,32 +44,17 @@ services:
     networks:
       elasticsearch:
 
-  nginx:
-    container_name: nginx
-    image: nginx
-    restart: on-failure
+  app:
+    build:
+      context: .
+    container_name: app
     ports:
       - 80:80
-    depends_on:
-      - php
-      - elasticsearch
-      - mysql
-    volumes:
-      - ./:/var/www/html
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      elasticsearch:
-
-  artisan:
-    container_name: artisan
-    image: xiaoxuan6/php:7.4-fpm-alpine
     volumes:
       - ./:/var/www/html
     depends_on:
-      - elasticsearch
       - mysql
-    working_dir: /var/www/html
-    entrypoint: [ 'php', '/var/www/html/artisan' ]
+      - elasticsearch
     networks:
       elasticsearch:
 
