--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
-		"james.xue/laravel-elasticsearch": "2.3.*",
+        "james.xue/laravel-elasticsearch": "2.3.*",
         "laravel/framework": "^6.18.35",
         "laravel/tinker": "^2.0"
     },
@@ -58,5 +58,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
     }
 }
