1、安装 PHP 扩展 2、apache 解析 php 3、执行 migrate 和初始化 es 4、解决容器无法访问外网和容器中执行 composer install 不生成 vendor 目录问题

--- a/default.conf
+++ b/default.conf
@@ -2,15 +2,15 @@
     ServerName localhost
     DocumentRoot /var/www/html/public
     <Directory "/var/www/html/public">
-        DirectoryIndex index.html
+        DirectoryIndex index.php index.html
     </Directory>
 
     ErrorLog /var/log/apache2/error.log
     CustomLog /var/log/apache2/access.log combined
 
-    RewriteEngine On
+    #RewriteEngine On
 
-    RewriteCond "%{DOCUMENT_ROOT}%{REQUEST_FILENAME}" !-f
-    RewriteCond "%{DOCUMENT_ROOT}%{REQUEST_FILENAME}" !-d
-    RewriteRule "^" "/index.php" [L]
+    #RewriteCond "%{DOCUMENT_ROOT}%{REQUEST_FILENAME}" !-f
+    #RewriteCond "%{DOCUMENT_ROOT}%{REQUEST_FILENAME}" !-d
+    #RewriteRule ^(.*)$ index.php？/$1 [QSA,PT,L]
 </VirtualHost>
